Fix names of flower summary pages

--- a/layouts/partials/flower-sidebar-browse-en.html
+++ b/layouts/partials/flower-sidebar-browse-en.html
@@ -10,9 +10,9 @@
   <h3 class="sidebar__title">Browse the Database</h3>
   <ul>
     <li><a href="{{ $.Site.BaseURL}}en/flowers">Slovenian wild flowers</a></li>
-    <li><a href="{{ $.Site.BaseURL}}en/flowers/list.html">All plants in our database</a></li>
-    <li><a href="{{ $.Site.BaseURL}}en/flowers/latin.html">Plants by latin names</a></li>
-    <li><a href="{{ $.Site.BaseURL}}en/flowers/plants-families.html">Plants by families</a></li>
+    <li><a href="{{ $.Site.BaseURL}}en/flowers/list/">All plants in our database</a></li>
+    <li><a href="{{ $.Site.BaseURL}}en/flowers/latin/">Plants by latin names</a></li>
+    <li><a href="{{ $.Site.BaseURL}}en/flowers/plants-families/">Plants by families</a></li>
     <li><a href="{{ $.Site.BaseURL}}en/family/">List of families</a></li>
     <li><a href="{{ $.Site.BaseURL}}en/flowers/genus/">List of genera</a></li>
   </ul>
