--- a/layouts/partials/flower-sidebar-browse-sl.html
+++ b/layouts/partials/flower-sidebar-browse-sl.html
@@ -12,10 +12,10 @@
   <h3 class="sidebar__title">Pregledi</h3>
   <ul>
     <li><a href="{{ $.Site.BaseURL}}flowers">Galerija slovenskih rož</a></li>
-    <li><a href="{{ $.Site.BaseURL}}flowers/list.html">Rastline v bazi &ndash; fotografije</a></li>
-    <li><a href="{{ $.Site.BaseURL}}flowers/names.html">Vse rastline &ndash; slovenska imena</a></li>
-    <li><a href="{{ $.Site.BaseURL}}flowers/latin.html">Vse rastline &ndash; latinska imena</a></li>
-    <li><a href="{{ $.Site.BaseURL}}flowers/plants-families.html">Rastline urejene po družinah</a></li>
+    <li><a href="{{ $.Site.BaseURL}}flowers/list/">Rastline v bazi &ndash; fotografije</a></li>
+    <li><a href="{{ $.Site.BaseURL}}flowers/names/">Vse rastline &ndash; slovenska imena</a></li>
+    <li><a href="{{ $.Site.BaseURL}}flowers/latin/">Vse rastline &ndash; latinska imena</a></li>
+    <li><a href="{{ $.Site.BaseURL}}flowers/plants-families/">Rastline urejene po družinah</a></li>
     <li><a href="{{ $.Site.BaseURL}}family/">Seznam družin</a></li>
     <li><a href="{{ $.Site.BaseURL}}flowers/genus/">Seznam rodov</a></li>
   </ul>
