--- a/layouts/flowers/single.html
+++ b/layouts/flowers/single.html
@@ -1,5 +1,5 @@
 {{ partial "header.html" . }}
-{{ $title := dict "title" (printf "%s (%s)" .Title .Params.latin) "page" . }}
+{{ $title := dict "title" (cond (eq .Title .Params.latin) (.Title) (printf "%s (%s)" .Title .Params.latin)) "page" . }}
 {{ partial "multi-title.html" $title }}
 <article id="left-column">
   {{ partial "flower-crumbs.html" . }}
