--- a/layouts/partials/flower-sidebar-browse-sl.html
+++ b/layouts/partials/flower-sidebar-browse-sl.html
@@ -1,10 +1,10 @@
 <div class="regbox decorated">
   <h3 class="sidebar__title">Jagodni izbor</h3>
   <ul>
-    <li><a href="{{ $.Site.BaseURL}}/flowers/pomladne-roze">Prvi znanilci pomladi</a></li>
-    <li><a href="{{ $.Site.BaseURL}}/flowers/family/orchidaceae">Slovenske orhideje</a></li>
-    <li><a href="{{ $.Site.BaseURL}}/flowers/genus/lilium">Slovenske lilije</a></li>
-    <li><a href="{{ $.Site.BaseURL}}/flowers/genus/cirsium">Osati</a></li>
+    <li><a href="{{ $.Site.BaseURL}}flowers/pomladne-roze">Prvi znanilci pomladi</a></li>
+    <li><a href="{{ $.Site.BaseURL}}flowers/family/orchidaceae">Slovenske orhideje</a></li>
+    <li><a href="{{ $.Site.BaseURL}}flowers/genus/lilium">Slovenske lilije</a></li>
+    <li><a href="{{ $.Site.BaseURL}}flowers/genus/cirsium">Osati</a></li>
   </ul>
 </div>
 
